fix dark mode

--- a/src/app/shared/styles/accessibility.scss
+++ b/src/app/shared/styles/accessibility.scss
@@ -478,8 +478,14 @@ html[data-mode="dark"],
       mat-slide-toggle {
         color: var(--text-primary) !important;
 
+        .mdc-form-field {
+          align-items: center !important;
+        }
+
         .mdc-label {
           color: var(--text-primary) !important;
+          display: flex !important;
+          align-items: center !important;
         }
 
         mat-icon {
